# study

./: README.md  qna.md  setup.sh
ai-basics/: 01_ai_ml_concepts.md  02_api_integration.md  03_ai_ux_patterns.md  04_performance_optimization.md  05_llm_api_practice.ipynb  06_langchain_practice.ipynb  07_langfuse_practice.ipynb  langchain_langfuse_example.py
backend/: README.md  fastapi-beginner-guide.md  qa-testing-strategies.md
backend/week1/: README.md  main.py  pyproject.toml
backend/week2/: .gitignore  QUICKSTART.md  README.md  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  run.sh
backend/week3/: .coverage  README.md  app.db  locustfile.py  pyproject.toml
backend/week3/app/: database.py  main.py  models.py
backend/week3/tests/: conftest.py  test_integration_users.py  test_unit_users.py
backend/week4/: README.md  main.py  pyproject.toml
backend/week5/: 01_state_management.md  02_idempotency.md  03_mvp_design.md  README.md  main.py  pyproject.toml
example/case1/: README.md  client.py  main.py  pyproject.toml  requirements.txt  server.py
example/case2_memo_agent/: .env.example  README.md  memo_agent.py  memo_mcp_server.py  pyproject.toml
example/case3_concert_db/: DB_TABLES.md
fastapi-example/: .dockerignore  1study-docker.md  2study-database.md  3study-testing.md  4study-performance.md  CODE_EXPLANATION.md  Dockerfile  README.md  docker-compose.yml  locustfile.py  pyproject.toml
fastapi-example/app/: __init__.py  database.py  dependencies.py  init_db.py  main.py  models.py
fastapi-example/app/routers/: __init__.py  todos.py
fastapi-example/tests/: conftest.py  test_integration_todos.py  test_unit_todos.py
k8s/: kubernetes-basic-concepts.md  kubernetes-hands-on.md
python/basics/: control_flow.md  data_structures.md
python/concurrency/: 1_threading_basics.py  2_multiprocessing_basics.py  3_asyncio_basics.py  4_comparison.py  5_real_world_examples.py  6_backend_load_test.md  README.md
