[project]
name = "week3"
version = "0.1.0"
description = "3주차: pytest 유닛/통합 테스트 + Locust 부하 테스트"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    # 테스트 의존성
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "pytest-cov>=6.0.0",
    # 부하 테스트
    "locust>=2.32.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
